# release-please-bug-update-prs

./: .release-please-manifest.json  CHANGELOG.md  README.md  package.json  release-please-config.json
.github/workflows/: release-please.yml
package1/: CHANGELOG.md  package.json  pyproject.toml
package1/src/package1/: __init__.py
package2/: CHANGELOG.md  package.json  pyproject.toml
package2/src/package2/: __init__.py
