[project]
name = "package2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gaetan bogaert", email = "gbogaert62@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
